# MazeCubeGenerator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.c  maze-export.c  maze-export.h  maze-stl.c  maze-stl.h  maze.c  maze.h  maze21.txt  maze_stl.c  mcg_config.h  mcg_config.h.in  oskars.txt  pmg_config.h  pmg_config.h.in
mazes/: endTest1.txt  endTest2.txt  endTest3.txt  endTest4.txt  maze21.txt  maze4d.txt  maze4d_orig.txt  oskars.txt  xyz.txt
ndt/: README.md  maze-cube.c
